@@ -83,7 +83,8 @@ init_ui (gint   *argc,
 
         gtk_init (argc, argv);
         glade_init ();
-        g_thread_init (NULL);
+        if (!g_thread_supported ())
+                g_thread_init (NULL);
 
         glade_xml = glade_xml_new (GLADE_FILE, NULL, NULL);
         if (glade_xml == NULL) {
